gh-159 fix morphed icon on mobile

--- a/css/_sass/_template-console.scss
+++ b/css/_sass/_template-console.scss
@@ -101,9 +101,13 @@ $ui-font-size: 1rem;
 }
 
 .tmp-ui-icon {
-  width: 1rem;
-  height:  1rem;
   display: block;
+  @media screen and (max-width: 48em) {
+    width: 1.5rem;
+  }
+  @media screen and (min-width: 48em) {
+    width: 1rem;
+  }
 }
 
 .tmp-table-container {
